# itmo_labworks

./: README.md
BinTree_labwork8-MikhailLebedItmo/: CMakeLists.txt  README.md
BinTree_labwork8-MikhailLebedItmo/lib/: CMakeLists.txt  tree.h
BinTree_labwork8-MikhailLebedItmo/test/: CMakeLists.txt  tree_ut.cpp
Multi_threads_arch/: CMakeLists.txt  README.md  REPORT.md  hit.cpp  main.cpp
PortScanner/: README.md  main.cpp
Ranges_labwork9-MikhailLebedItmo/: .gitignore  CMakeLists.txt
Ranges_labwork9-MikhailLebedItmo/lib/: CMakeLists.txt  adapter_concepts.h  adapters.cpp  adapters.h  drop_adapter.h  filter_adapter.h  reverse_adapter.h  take_adapter.h  transform_adapter.h  utils.h  values_adapter.h
Ranges_labwork9-MikhailLebedItmo/test/: CMakeLists.txt  adapters_ut.cpp
int2023_t/: .gitignore  README.md
int2023_t/lib/: number.cpp  number.h
int2023_t/tests/: number_test.cpp
